<resources>
    <string name="app_name">Reconocimiento</string>
    <string name="des4">Se recomienda recoger con mucho cuidado todos los brotes infestados y luego quemarlos. La recolección de brotes tiene que realizarse en baldes o bolsas plásticas, para evitar que las ninfas y adultos se escapen, o los huevos sean transportados por el viento a otras plantas o parcelas.</string>
    <string name="des3">En condiciones naturales existe una mosca de la familia Syrphidae (Ocyptamus persimilis), y una hormiga de la familia Formicidae (Camponotus rufipes) que prenda las ninfas de la plaga. La mosca pone su huevo en las colonias de T. cognata, la larva mide de 8 a 9 mm de largo en su último estadio, de color blanco gris, y parecida a una pequeña babosa. La baja relación predador/presa registrada (0.2- 0.6 /4.6-7.9) indica que la mosca no es suficiente para  controlar la población de T. cognata.</string>
    <string name="des2">Se observan mayormente en plantaciones inundables. Cuando el camu-camu es joven, durante el día el insecto puede permanecer refugiado en otro árbol o en la maleza que existe cerca de la planta de camu-camu. El Piojo Saltador induce el encorvamiento y sacado de las hojas apicales</string>
    <string name="des1">Las infestaciones más fuertes ocurren en plantaciones jóvenes y en época de verano; en época de lluvia las poblaciones disminuyen considerablemente, pero los síntomas persisten. La plaga produce infestaciones hasta en un 94 % de las plantas en los cultivos, siendo la parte superior la más preferida por el insecto (68%)</string>
    <string name="des">Es un insecto adulto mide de 5 a 6 mm de largo, es de color marrón claro con las alas parcialmente transparentes, poco visibles en la planta. El adulto se puede reconocer por su posición característica (a 45º) en las ramas. La ninfa está cubierta de una pulverulencia blanca con hilos de ceras muy finos y largos del mismo color. La ninfa es móvil y vive en colonias de hasta 20 individuos en las hojas plegadas, puede haber varias colonias por brote atacado. La ninfa provoca deformaciones
importantes en las hojas jóvenes, impidiendo el crecimiento de los brotes. Al comienzo del ataque las hojas se ensanchan, se estampan, se pliegan a nivel de la nervadura principal, y poco a poco todo el brote se pone amarillo y se seca.
</string>

</resources>
